--- a/project6/css/6styles.css
+++ b/project6/css/6styles.css
@@ -2,6 +2,7 @@
 
 body {
     background-image: url("/project6/img/coffee.jpg");
+    background-attachment: fixed;
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
